# Snake

./: .gitignore  CMakeLists.txt  README.md  ReadME.md
include/: AssetMan.hpp  Game.hpp  GameOver.hpp  GamePlay.hpp  MainMenu.hpp  PauseGame.hpp  Snake.hpp  State.hpp  StateMan.hpp
src/: Game.cpp  GameOver.cpp  GamePlay.cpp  MainMenu.cpp  PauseGame.cpp  Snake.cpp  StateMan.cpp  main.cpp  resources.rc
